--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,26 @@
 /* styles go here */
+.field {
+  margin-bottom: 20px;
+}
+
+.input {
+  margin-bottom: 10px;
+}
+
+/* .form-field {
+  display: inline-block;
+} */
+
+.add-info {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form-field {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.cats {
+  margin-bottom: 4px;
+}
